--- a/package.json
+++ b/package.json
@@ -1,35 +1,27 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "backend peoplelitics",
+  "description": "Compass.uol Backend",
   "main": "index.js",
-  "repository": "https://github.com/Tonybsilva-dev/Peoplelitics",
+  "repository": "https://github.com/Tonybsilva-dev/compass.uol-interview-nodejs",
   "author": "Antonio Bernardino da Silva <tonybsilvadev@gmail.com>",
   "license": "MIT",
   "scripts": {
     "dev": "tsnd --exit-child --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.6",
-    "@types/multer": "^1.4.7",
-    "@types/node-cron": "^3.0.1",
+    "git-commit-msg-linter": "^4.1.1",
     "prisma": "^3.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   },
   "dependencies": {
     "@prisma/client": "^3.7.0",
-    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "express-async-errors": "^3.1.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.6",
-    "multer": "^1.4.4",
-    "node-cron": "^3.0.0"
+    "express-async-errors": "^3.1.1"
   }
 }
