--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules
 # Keep environment variables out of version control
 .env
 coverage
+src/coverage
 
 tmp/uploads/*
 !tmp/uploads/.gitkeep/
