--- a/package.json
+++ b/package.json
@@ -7,13 +7,23 @@
   "author": "Antonio Bernardino da Silva <tonybsilvadev@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "tsnd --exit-child --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts"
+    "dev": "tsnd --exit-child --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
+    "test": "jest --no-cache --coverage"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
+    "@types/supertest": "^2.0.11",
+    "babel-jest": "^27.5.1",
     "git-commit-msg-linter": "^4.1.1",
+    "jest": "^27.5.1",
     "prisma": "^3.7.0",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   },
