--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/swagger-ui-express": "^4.1.3",
     "git-commit-msg-linter": "^4.1.1",
     "prisma": "^3.7.0",
     "ts-node-dev": "^1.1.8",
@@ -24,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "swagger-ui-express": "^4.3.0"
   }
 }
